2012-05-04  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/, man/: Split SDR option "sdr-cache-directory"
	into separate macro/man option.

	* ipmidetectd/: Rename files for consistency to other parts of
	FreeIPMI.

	* toolevent/tool-event-common.c: Allow NULL for column_width input
	as long as output will be comma separated.  Allow NULL for
	entity_id_counts if entity_sensor_names not desired.
	
2012-05-03  Albert Chu <chu11@llnl.gov>

	* ipmidetectd/ipmidetectd_config.c (_usage): Fix cut and paste
	typo.
	
2012-05-03  Albert Chu <chu11@llnl.gov>

	* common/daemonutil/daemon-util.h, common/daemonutil/daemonutil.c:
	New files and convenience library.

	* bmc-watchdog/, ipmidetectd/: Utilize new common library.
	Various code cleanup as needed.

	* ipmidetectd/ipmidetectd_loop.h, ipmidetectd/ipmidetectd_loop.c:
	Remove files.  Collapse code in ipmidetectd.c.

	* ipmidetectd/ipmidetectd_argp.h, ipmidetectd/ipmidetectd_argp.c:
	New files.

	* ipmidetectd/: Various code re-org for consistency to rest of
	FreeIPMI.

	* ipmidetect/ipmidetect_.h, ipmidetect/ipmidetect-argp.h,
	ipmidetect/ipmidetect-argp.c: New files.

	* ipmidetect/: Various code re-org for consistency to rest of
	FreeIPMI.
	
2012-05-02  Albert Chu <chu11@llnl.gov>

	* man/ipmidetectd.8.pre.in: Document that errors are logged to
	syslog.

	* ipmidetectd/: Use miscutil error libraries instead of internal
	debug functions.

	* ipmidetectd/ipmidetectd_debug.h,
	ipmidetectd/ipmidetectd_debug.c: Remove files.
	
2012-05-02  Albert Chu <chu11@llnl.gov>

	Merge branch bmcwatchdogrearch.  Rearch bmc-watchdog to use all
	new libraries available to it, make it more consistent to other
	daemons, and properly reflect features/options.

	* libfreeipmi/api/: Support new IPMI_ERR_DRIVER_BUSY error code to
	return when a driver is busy.

	* common/toolcommon/, bmc-watchdog/: Use miscutil common error
	handling functions and properly syslog some initialize errors when